--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ a {
 .logo {
 }
 .footer-logo {
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.16667;
