--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  font-style: normal;
 }
 /* --------------------HERO----------------------- */
 .page-hero {
@@ -72,7 +73,7 @@ a {
 .hero-title {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.1;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
